--- a/.gitignore
+++ b/.gitignore
@@ -4,8 +4,8 @@
 wp-content/*
 !wp-content/themes
 wp-content/themes/*
-wp-content/themes/poetry-garden
-wp-content/themes/poetry-garden-roots
+!wp-content/themes/poetry-garden
+!wp-content/themes/poetry-garden-roots
 !wp-content/plugins
 wp-content/plugins/*
 !wp-content/plugins/bp-custom.php
